Fix header excess spacing
**Why**: So that the header elements correctly appear as vertically centered

--- a/app/assets/stylesheets/components/_nav.scss
+++ b/app/assets/stylesheets/components/_nav.scss
@@ -43,14 +43,6 @@
   }
 }
 
-.authnav-greeting {
-  display: none;
-
-  @include at-media('desktop') {
-    display: block;
-  }
-}
-
 .top-banner {
   display: none;
 
